--- a/src/pages/visa/index/index.scss
+++ b/src/pages/visa/index/index.scss
@@ -70,3 +70,13 @@
   width: 380rpx;
   background-color: gray;
 }
+
+.image {
+  height: 180rpx;
+  width: 335rpx;
+}
+
+.swiper-item-image {
+  width: 100%;
+  height: 100%
+}
